@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="JSure Tests" default="setup test suites to analyze">
+<project name="JSure Tests" default="run JSure on test suites">
 
 	<property name="fs" value="${file.separator}" />
 
@@ -67,31 +67,6 @@
 					<exclude name="bin/**,**/.svn/**" />
 				</fileset>
 			</copy>
-		</sequential>
-	</macrodef>
-
-	<!-- Helps us to run a test in our headless Eclipse-based JSure -->
-	<macrodef name="run-a-test">
-		<attribute name="target" />
-		<attribute name="workspace" />
-		<attribute name="project" />
-		<attribute name="log" />
-		<sequential>
-			<echo message="Running @{target} on @{project}" />
-			<property name="run-jsure-tests" value="${surelogic.test.plugin.dir}${fs}scripts${fs}lib${fs}run-jsure-tests.xml" />
-
-			<ant dir="${sandbox.eclipse.dir}" inheritAll="false" antfile="${run-jsure-tests}" target="@{target}">
-				<property name="os" value="" />
-				<property name="ws" value="" />
-				<property name="arch" value="" />
-				<property name="library-file" location="${eclipse.test.plugin.dir}${fs}library.xml" />
-				<property name="extraVMargs" value="-Xmx512m" />
-				<property name="test-workspace" value="@{workspace}" />
-				<property name="test-module" value="@{project}" />
-				<property name="log-dir" value="@{log}" />
-				<property name="eclipse-home" value="${sandbox.eclipse.dir}" />
-				<property name="my-script-home" value="${antfile.dir}" />
-			</ant>
 		</sequential>
 	</macrodef>
 
@@ -300,8 +275,11 @@
 	<target name="run JSure on test suites" depends="load jsure-tests.properties file">
 		<findfile property="eclipse.test.plugin.dir" basedir="${sandbox.eclipse.plugins.dir}" regex="org\.eclipse\.test_.*" />
 		<fail unless="eclipse.test.plugin.dir" message="Unable to find the Eclipse test plug-in (org.eclipse.test_*) within ${sandbox.eclipse.plugins.dir}." />
+		<property name="library.xml" value="${eclipse.test.plugin.dir}${fs}library.xml" />
+
 		<findfile property="surelogic.test.plugin.dir" basedir="${sandbox.eclipse.plugins.dir}" regex="com\.surelogic\.jsure\.tests_.*" />
 		<fail unless="surelogic.test.plugin.dir" message="Unable to find the SureLogic test plug-in (com.surelogic.jsure.tests_*) within ${sandbox.eclipse.plugins.dir}." />
+		<property name="jsure-tests-plugin-id" value="com.surelogic.jsure.tests" />
 
 		<for list="${jsure.tests.suites.to-scan}" delimiter="," param="suite" trim="true">
 			<sequential>
@@ -311,7 +289,23 @@
 				<findTests property="project.list" basedir="${suite.dir}" fullpaths="false" />
 				<for list="${project.list}" delimiter="," param="project" trim="true">
 					<sequential>
-						<run-a-test target="run-regression-tests" project="${suite.dir}/@{project}" workspace="${workspace.dir}/@{project}" log="${log.dir}/@{project}" />
+						<echo message="Running regression test on ${project.dir}" />
+
+						<property file="${workspace.dir}/test.properties" />
+						<property name="eclipse-home" value="${sandbox.eclipse.dir}" />
+						<ant antfile="${library.xml}" target="core-test" dir="${sandbox.eclipse.dir}">
+							<property name="os" value="win32" />
+							<property name="ws" value="win32" />
+							<property name="arch" value="x86_64" />
+							<property name="data-dir" value="${log.dir}${fs}@{project}" />
+							<property name="plugin-name" value="${jsure-tests-plugin-id}" />
+							<property name="classname" value="${jsure-tests-plugin-id}.AllRegressionTests" />
+							<property name="test-output" value="${jsure-tests-plugin-id}.AllRegressionTests.xml" />
+							<property name="junit-report-output" value="${workspace.dir}${fs}@{project}" />
+							<property name="workdir" value="${sandbox.eclipse.dir}" />
+							<property name="application" value="org.eclipse.test.coretestapplication" />
+							<property name="extraVMargs" value="-Xmx512m -XX:MaxPermSize=256m -Djava.util.logging.config.file=NONE -Ddc.testing=true -Dfluid.loadSystemProps=false -Dtest.module=${project.dir}" />
+						</ant>
 					</sequential>
 				</for>
 			</sequential>
@@ -319,13 +313,6 @@
 
 		<fail message="TODO" />
 
-		<findtests property="test.project.list" basedir="${test.workspace.base}" />
-		<!-- run regression tests -->
-		<for list="${test.project.list}" delimiter="," param="workspace" trim="true" keepgoing="false">
-			<sequential>
-				<run-a-test test-workspace="${test.workspace.base}/@{workspace}" target="run-regression-tests" test-module="${test.module.dir}/@{workspace}" extra-test-modules="${extra.test.modules}" />
-			</sequential>
-		</for>
 		<!-- run unit tests -->
 		<run-a-test test-workspace="${test.workspace.base}/UnitTests" target="run-unit-tests" test-module="${test.module.dir}/UnitTests" extra-test-modules="" />
 		<!-- run tests that require special handling -->
